# Qt6-Client-for-Boost-server

./: .gitignore  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  ImageHandler.cpp  ImageHandler.h  MainWindow.cpp  MainWindow.h  NetworkHandler.cpp  NetworkHandler.h  OperationsHandler.cpp  OperationsHandler.h
resources/: items_desc_prod.json  items_initial_count_prod.json  main.ipynb  products.html
tests/: CMakeLists.txt  gui_tests.cpp  gui_tests.h
translations/: en.ts  ru.ts
